# MurMur-

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ContentView.swift  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  app.js  app.py  compose.debug.yaml  compose.yaml  docker-compose.verify.yml  docker-compose.yml  economic_meta_policy.py  first-last-frame.ts  flake.nix  golden.mjs  index.html  jest.config.js  middleware.ts  murmur-cloud-terminal.html  murmur-learning-constellation.html  murmur-style-engine.html  murmur.avatar.yaml  netlify.toml  next.config.mjs  ollama_chat.py  orchestrator.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+16 more)
murmur-core/services/core/: Dockerfile  Makefile  pyproject.toml
murmur-core/services/core/codex/: OPERATING_MAP.md  RUNBOOK.md
murmur-core/services/core/src/murmur_core/: api.py  (+1 more)
spectre-system/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
spectre-system/modules/: __init__.py  decision_engine.py  edge_monitor.py  execution_simulator.py  feature_pipeline.py  portfolio.py  regime_classifier.py  stress_engine.py
spectre-system/scripts/: run_sim.sh
spectre-system/shared/: __init__.py  logging.py  schemas.py  time.py
spectre-system/simulation/: engine.py  metrics_collector.py  replay_controller.py  scenario_injector.py
spectre-system/simulation/data/: sample_ticks.csv
spectre-system/tests/: test_determinism.py  test_schema_validation.py  test_sim_runs.py
(+1266 files in other folders)
